<resources>
    <string name="app_name">My Application</string>
    <string name="back_button">Back</string>
    <string name="ageRating_13">13+</string>
    <string name="title_AEG">Avengers:\nEnd Game</string>
    <string name="content_tag">Action, Adventure, Fantasy</string>
    <string name="description_AEG">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="count_of_views">125 views</string>
    <string name="storyline">Storyline</string>
    <string name="main_poster">main_poster</string>
    <string name="string_main_poster" />
    <string name="kekw">kekw</string>
    <string name="image_robert_downey_jr">image Robert Downey Jr</string>
</resources>