<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/movie_details_background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/movie_details_background">

        <ImageView
            android:id="@+id/movieBackground"
            android:layout_width="@dimen/null_dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/string_main_poster"
            android:foreground="@drawable/shape"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avg_main"
            tools:targetApi="m" />

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_space"
            android:layout_marginTop="@dimen/back_button_margin_top"
            android:alpha="0.5"
            android:drawablePadding="@dimen/small_space"


            android:text="@string/back_button"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/normal_text_size"
            app:drawableLeftCompat="@drawable/back_button"
            app:drawableTint="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ageRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_space"
            android:layout_marginBottom="@dimen/normal_text_size"
            android:text="@string/ageRating_13"


            android:textColor="@color/white"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toTopOf="@+id/titleAEG"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/titleAEG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_space"
            android:text="@string/title_AEG"
            android:textColor="@color/white"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/movieBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movieBackground" />

        <TextView
            android:id="@+id/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_space"
            android:layout_marginStart="@dimen/normal_text_size"
            android:gravity="center_vertical"
            android:text="@string/content_tag"
            android:textColor="#FF3466"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <TextView
            android:id="@+id/descriptionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_space"
            android:text="@string/storyline"
            android:textColor="@color/white"
            android:textSize="@dimen/subtitle_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genre" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_space"
            android:alpha="0.75"
            android:text="@string/description_AEG"
            android:textColor="@color/white"
            android:textSize="@dimen/subtitle_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionTitle" />

        <TextView
            android:id="@+id/cast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_space"
            android:text="@string/cast"
            android:textColor="@color/white"
            android:textSize="@dimen/subtitle_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/normal_space"
            android:numStars="5"
            android:progressBackgroundTint="@color/white"
            android:progressTint="#FF3365"
            android:rating="3.5"
            android:stepSize="0.5"
            app:layout_constraintEnd_toStartOf="@+id/viewsCounter"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleAEG" />

        <TextView
            android:id="@+id/viewsCounter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/normal_space"
            android:text="@string/count_of_views"
            android:textColor="@color/dark_gray"
            android:textSize="@dimen/normal_text_size"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toTopOf="@+id/ratingBar" />

        <ImageView
            android:id="@+id/downeyImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/small_space"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@+id/evansImageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast"
            app:srcCompat="@drawable/downey_jr" />

        <ImageView
            android:id="@+id/evansImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/small_space"
            android:adjustViewBounds="true"
            android:contentDescription="@string/chris_evans"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@+id/hemsworthImageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/downeyImageView"
            app:layout_constraintTop_toBottomOf="@+id/cast"
            app:srcCompat="@drawable/evans_ch" />

        <ImageView
            android:id="@+id/hemsworthImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/small_space"
            android:adjustViewBounds="true"
            android:contentDescription="@string/chris_hemsworth"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@+id/ruffaloImageView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/evansImageView"
            app:layout_constraintTop_toBottomOf="@+id/cast"
            app:srcCompat="@drawable/hemsworth" />

        <ImageView
            android:id="@+id/ruffaloImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="@dimen/small_space"
            android:adjustViewBounds="true"
            android:contentDescription="@string/mark_ruffalo"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/hemsworthImageView"
            app:layout_constraintTop_toBottomOf="@+id/cast"
            app:srcCompat="@drawable/ruffalo_mark" />

        <TextView
            android:id="@+id/downeyTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_space"
            android:text="@string/robert_downey_jr"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/evansTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/downeyImageView" />

        <TextView
            android:id="@+id/evansTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_space"
            android:text="@string/chris_evans"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/hemsworthTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/downeyTextView"
            app:layout_constraintTop_toBottomOf="@+id/evansImageView" />

        <TextView
            android:id="@+id/ruffaloName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_space"
            android:text="@string/mark_ruffalo"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/hemsworthTextView"
            app:layout_constraintTop_toBottomOf="@+id/ruffaloImageView" />

        <TextView
            android:id="@+id/hemsworthTextView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/small_space"
            android:text="@string/chris_hemsworth"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/ruffaloName"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/evansTextView"
            app:layout_constraintTop_toBottomOf="@+id/hemsworthImageView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>